--- a/style.css
+++ b/style.css
@@ -11,23 +11,29 @@ body{
             box-sizing: inherit;
 }
 
-#speaker{
+.speaker-holder{
     position: absolute;
     top: 50%;
     left: 50%;
+    display: flex;
+    flex-direction: column;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
     -webkit-appearance: none;
        -moz-appearance: none;
             appearance: none;
 
+    
+}
+.speaker{
     background-color: #2d2d2d;
     padding: 15px 30px;
     color: whitesmoke;
     cursor: pointer;
     border: 1px solid transparent;
     border-radius: 25px;
+    margin: 10px 0;
 }
-#speaker:focus{
+.speaker:focus{
     outline: none;
 }
