--- a/style.css
+++ b/style.css
@@ -11,19 +11,22 @@ body{
             box-sizing: inherit;
 }
 
-.speaker-holder{
+.button-container{
     position: absolute;
     top: 50%;
     left: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.speaker-holder{
     display: flex;
     flex-direction: column;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
     -webkit-appearance: none;
        -moz-appearance: none;
-            appearance: none;
-
-    
+            appearance: none;   
 }
 .speaker{
     background-color: #2d2d2d;
@@ -33,6 +36,15 @@ body{
     border: 1px solid transparent;
     border-radius: 25px;
     margin: 10px 0;
+}
+.speaker-cancel{
+    cursor: pointer;
+    padding: 15px 30px;
+    border: 1px solid transparent;
+    border-radius: 25px;
+    margin: 10px 0;
+    background-color: salmon;
+    color: #2d2d2d;
 }
 .speaker:focus{
     outline: none;
