--- a/style.css
+++ b/style.css
@@ -12,9 +12,11 @@ body{
 }
 
 .button-container{
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 50px;
+    width: 20vw;
+    min-width: 150px;
     display: flex;
     flex-direction: column;
 }
@@ -22,8 +24,6 @@ body{
 .speaker-holder{
     display: flex;
     flex-direction: column;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
     -webkit-appearance: none;
        -moz-appearance: none;
             appearance: none;   
